Cleanup comments and fixup number input, basscss use

--- a/addon/templates/components/input-row.hbs
+++ b/addon/templates/components/input-row.hbs
@@ -1,6 +1,2 @@
-<div class="two columns">
-  <label class="label u-inline" for="{{name}}">{{label}}:</label>
-</div>
-<div class="six columns">
-  {{yield}}
-</div>
+<label class="block white mx0 mb1" for="{{name}}">{{label}}:</label>
+{{yield}}
